add: dotenv / fix style url

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-socket.io": "^3.0.7"
   },
   "devDependencies": {
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/eslint-config": "^1.0.1",
     "@nuxtjs/eslint-module": "^1.0.0",
     "babel-eslint": "^10.0.1",
